2024-02-04T08:07:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7772669322 # 85
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-04
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 316 663 / 332 693
* notice: next accum: outdated-unq outdated-all / unq all: 318 665 / 333 694
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-01-21] / [2024-02-04]

2024-02-04T00:32:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7770404353 # 84
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-04
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 315 661 / 332 692
* notice: next accum: outdated-unq outdated-all / unq all: 316 663 / 332 693
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-01-20] / [2024-02-03]

2024-02-03T08:07:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7765600082 # 82
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-03
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 315 661 / 331 691
* notice: next accum: outdated-unq outdated-all / unq all: 315 661 / 332 692
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-20 2024-02-03]

2024-02-03T00:30:06Z: