@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-04T08:07:10Z",
+  "timestamp" : "2024-02-05T00:31:27Z",
   "count_outdated" : 665,
   "uniques_outdated" : 318,
-  "count" : 694,
+  "count" : 695,
   "uniques" : 333,
   "clones" : [
     {
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
