@@ -1,5 +1,5 @@
 {
-  "count": 29,
+  "count": 30,
   "uniques": 2,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2024-02-04T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
