@@ -1,3 +1,12 @@
+2024-02-05T00:31:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7777899511 # 87
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-05
+* notice: last 14d: unq all: 2 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 318 665 / 333 694
+* notice: next accum: outdated-unq outdated-all / unq all: 318 665 / 333 695
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-02-04]
+
 2024-02-04T08:07:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7772669322 # 85
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-04
